# Kradical

./: .gitignore  Cargo.toml  README.md  intersections.js  rebuild_outputs.ps1
assets/jis/: jis212.py  jis213.py
assets/outputs/: adjacency.json  krad.json  krad_utf8.txt  radk.json  radk_utf8.txt
edrdg_files/: radkfile
jis/: Cargo.toml  jis212.py  jis213.py
jis/src/: jis212.rs  jis213.rs  lib.rs
kradical_converter/: Cargo.toml  README.md
kradical_converter/src/: error.rs  krad.rs  main.rs  opts.rs  radk.rs
kradical_jis/: Cargo.toml  README.md
kradical_parsing/: Cargo.toml  NOTES.md  README.md
kradical_parsing/src/: jis213.rs  krad.rs  lib.rs  radk.rs  shared.rs  test_constants.rs
kradical_parsing/src/krad/: tests.rs
kradical_parsing/src/radk/: tests.rs
kradical_static/: Cargo.toml  README.md
kradical_static/src/: decompositions.rs  expansions.rs  lib.rs  memberships.rs
outputs/: krad_utf8.txt
src/: bin.rs  jis212.rs  jis213.rs  krad.rs  lib.rs  radk.rs  shared.rs  test_constants.rs
src/jis213/: jis_to_unicode.rs
src/krad/: jis213.rs  kradfile2_hex.rs  kradfile_hex.rs  tests.rs
src/radk/: tests.rs
