[package]
name = "kradical_parsing"
version = "0.1.0"
edition = "2018"
license = "GPL-3.0-or-later"
description = "Parsers for EDRDG radical decomposition files"
repository = "https://github.com/tim-harding/Kradical"
keywords = ["japanese", "kanji", "radical"]
categories = ["parsing"]

[dependencies]
thiserror = "1"
nom = "6"
encoding = "0"
unicode-segmentation = "1"
kradical_jis = "0.1.0"